Fixes nested nested nested ul top spacing

--- a/static/sidebar.less
+++ b/static/sidebar.less
@@ -95,6 +95,9 @@ img.social-icon-small {
 						&.is-collapsible span + ul {
 							padding-left: 0;
 							margin-top: -10px;
+							ul {
+								margin-top: 0;
+							}
 						}
 						&.can-infrastructure span + ul {
 							margin-top: unset;
